# permissionless-validators

./: .gitignore  Cargo.toml  README.md
ingl_macros/: Cargo.toml
ingl_macros/src/: lib.rs
python/: README.md  buffer_changes.py  rand  setup.py  test.ipynb  upgrade_authority_changes.py
python/ipynbs/: test.ipynb  testing.ipynb
python/src/: cli_state.py  ingl_cli.py  instruction.py  ledger.py  processor.py  state.py
src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs  utils.rs
src/processes/: mod.rs
src/processes/governance_processes/: execute_governance.rs  finalize_governance.rs  init_governance.rs  mod.rs  vote_governance.rs
src/processes/init_processes/: fractionalize_existing.rs  init.rs  mod.rs  reset_uris.rs  upload_uris.rs
src/processes/nft_processes/: delegate_nft.rs  imprint_rarity.rs  mint_nft.rs  mod.rs  redeem_nft.rs  undelegate_nft.rs
src/processes/rewards_processes/: finalize_rebalance.rs  init_rebalance.rs  mod.rs  nft_withdraw.rs  process_rewards.rs
src/processes/validator_processes/: create_vote_account.rs  mod.rs
