[package]
name = "ingl_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0.103"
quote = "1.0.21"
proc-macro2 = "1.0.47"

[profile.release]
overflow-checks = true

[lib]
proc-macro = true